[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { path = "../dependencies/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
easy-fs = { path = "../easy-fs" }
log = "0.4"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
k210-pac = { path = "../dependencies/k210-pac" }
k210-hal = { path = "../dependencies/k210-hal" }
k210-soc = { path = "../dependencies/k210-soc" }
lwext4_rust = { git = "https://github.com/elliott10/lwext4_rust.git" }
virtio-drivers-fs = { git = "https://github.com/rcore-os/virtio-drivers.git", package = 'virtio-drivers', rev = "61ece509" }
device_tree = { git = "https://github.com/rcore-os/device_tree-rs", rev = "2f2e55fb" }
spin = "0.9.8"
[profile.release]
debug = true
